@@ -1,5 +1,6 @@
 #include "include.h"
 #include "AudioContext.h"
+#include "IAudioDeviceChangedCallback.h"
 #include "../xbmc/Settings.h"
 #include "../xbmc/XBAudioConfig.h"
 
