@@ -1,3 +1,4 @@
+#include "include.h"
 #include "GUIIncludes.h"
 
 CGUIIncludes::CGUIIncludes()
